fixed z-index filter mobile

--- a/src/resources/assets/sass/web_v2/_filter_product.scss
+++ b/src/resources/assets/sass/web_v2/_filter_product.scss
@@ -31,7 +31,7 @@
 	position: fixed;
 	right: 0;
 	left: 0;
-	z-index: 1030;
+	z-index: 5;
 	ul.category-list > li > span, ul.sort-list > li > span{
 		width: 14.23px;
 		height: 13px;
